[gd_scene load_steps=7 format=3 uid="uid://dnecq2j0tl61d"]

[ext_resource type="Script" path="res://room/room_management.gd" id="1_2e2sv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_row8k"]
bg_color = Color(0.247059, 0.247059, 0.247059, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7joj6"]
bg_color = Color(0.184314, 0.184314, 0.184314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6p3if"]
bg_color = Color(0.184314, 0.184314, 0.184314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pmobg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c1x2b"]

[node name="room_management" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2e2sv")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 59.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="bar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -330.0
offset_bottom = -266.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_row8k")

[node name="to_search" type="LineEdit" parent="bar"]
layout_mode = 0
offset_left = 8.0
offset_top = 14.0
offset_right = 689.0
offset_bottom = 45.0
theme_override_styles/normal = SubResource("StyleBoxFlat_7joj6")

[node name="btn_buscar" type="Button" parent="bar"]
layout_mode = 0
offset_left = 696.0
offset_top = 14.0
offset_right = 757.0
offset_bottom = 45.0
theme_override_colors/font_pressed_color = Color(1, 0.92549, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_6p3if")
theme_override_styles/hover = SubResource("StyleBoxFlat_pmobg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c1x2b")
text = "Buscar"

[node name="btn_show" type="Button" parent="bar"]
layout_mode = 0
offset_left = 762.0
offset_top = 14.0
offset_right = 829.0
offset_bottom = 45.0
theme_override_colors/font_pressed_color = Color(1, 0.92549, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_6p3if")
theme_override_styles/hover = SubResource("StyleBoxFlat_pmobg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c1x2b")
text = "Mostrar"

[node name="btn_save" type="Button" parent="bar"]
layout_mode = 0
offset_left = 834.0
offset_top = 14.0
offset_right = 901.0
offset_bottom = 45.0
theme_override_colors/font_pressed_color = Color(1, 0.92549, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_6p3if")
theme_override_styles/hover = SubResource("StyleBoxFlat_pmobg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c1x2b")
text = "Guardar"

[node name="btn_back" type="Button" parent="bar"]
layout_mode = 0
offset_left = 1001.0
offset_top = 14.0
offset_right = 1062.0
offset_bottom = 45.0
theme_override_colors/font_pressed_color = Color(1, 0.92549, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_6p3if")
theme_override_styles/hover = SubResource("StyleBoxFlat_pmobg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c1x2b")
text = "<<"

[node name="btn_forward" type="Button" parent="bar"]
layout_mode = 0
offset_left = 1069.0
offset_top = 14.0
offset_right = 1130.0
offset_bottom = 45.0
theme_override_colors/font_pressed_color = Color(1, 0.92549, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_6p3if")
theme_override_styles/hover = SubResource("StyleBoxFlat_pmobg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c1x2b")
text = ">>"

[node name="count_pages" type="Label" parent="bar"]
layout_mode = 0
offset_left = 928.0
offset_top = 19.0
offset_right = 968.0
offset_bottom = 42.0

[connection signal="pressed" from="bar/btn_buscar" to="." method="_on_btn_buscar_pressed"]
[connection signal="pressed" from="bar/btn_show" to="." method="_on_btn_show_pressed"]
[connection signal="pressed" from="bar/btn_save" to="." method="_on_btn_save_pressed"]
[connection signal="pressed" from="bar/btn_back" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="bar/btn_forward" to="." method="_on_btn_forward_pressed"]
